minikube/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: mhbx12/todo-backend:latest
        imagePullPolicy: Always  # Add this line below image
        ports:
        - containerPort: 8080
